Prevent the click area becoming too large

--- a/src/static/css/pages/_proposals.scss
+++ b/src/static/css/pages/_proposals.scss
@@ -147,8 +147,8 @@ body.dashboard{
             position: absolute;
             top: 0;
             left: 0;
-            min-width: 100%;
-            min-height: 100%;
+            width: 100%;
+            height: 100%;
             opacity: 0;
         }
     }
